fix: replace advertising board on homepage to fix payout issues with text not fitting original board

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -2,6 +2,7 @@
 #intro {
     position: relative;
     height: 100vh;
+    overflow: hidden;
 }
 
 video.background-video {
@@ -16,7 +17,7 @@ video.background-video {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
     color: #ddd;
     display: flex;
     flex-direction: column;
@@ -30,6 +31,10 @@ video.background-video {
     margin-bottom: 10px;
     padding: 0 5px;
     font-size: 2.0rem;
+    text-shadow: 0 0 10px #ddd,
+                 0 0 10px #0ff,
+                 0 0 20px #0ff,
+                 0 0 40px #0ff;
 }
 
 /* Product Range */
@@ -50,58 +55,37 @@ video.background-video {
 /* Info-board Styling */
 .digital-sign {
     position: absolute;
-    width: 50%;
     bottom: 0;
-    left: 0;
-}
-
-img.info-board {
-    position: relative;
-    height: 10rem;
-    display: block;
-}
-
-.sign-content {
-    position: absolute;
-    top: 20%;
-    left: 65%;
-    width: calc(100% - 74px);
-    transform: translateX(-50%);
+    left: 30px;
+    background-image: url('../images/oak-wood.avif');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: brightness(1.0) saturate(0.75);
+    height: 8rem;
+    width: 10rem;
+    margin: 2rem auto;
+    padding: 1rem 1rem;
     text-align: center;
+    box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.3);
+  }
+  
+  /* Text at the top of the board */
+  .sign-upper p {
     color: red;
-}
-
-.sign-upper {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-}
-
-.sign-upper p {
-    width: 80%;
-    font-size: clamp(0.9rem, 2.5vw, 1.2rem);
     font-weight: bold;
-    line-height: 1.2;
-}
-
-.sign-lower {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    width: 100px;
-}
-
-.sign-lower p {
-    font-size: clamp(0.9rem, 2.5vw, 1.2rem);
+    font-size: clamp(0.9rem, 2.5vw, 1rem);
+    line-height: 1.4;
+    margin-bottom: 1rem;
+  }
+  
+  /* Countdown below */
+  .sign-lower p {
+    color: red;
     font-weight: bold;
-}
-
-p#countdown-timer {
-    margin-top: 5.5rem;
-    margin-left: -15px !important;
-}
+    font-size: clamp(0.9rem, 2.2vw, 1rem);
+    margin-bottom: 0;
+  }
 
 /* Road Signs */
 .road-signs {
@@ -192,34 +176,33 @@ p#countdown-timer {
 
 /* Responsive Adjustments */
 @media (min-width: 768px) {
-
-    img.info-board {
-        height: 15rem;
+    .catch-phrase {
+        font-size: 2.5rem;
     }
 
-    .sign-content {
-        left: 40%;
-        width: 80%;
-        transform: translateX(-28%);
+    .product-range {
+        font-size: 1.3rem;
     }
-   
+
+    .digital-sign {
+        height: 11rem;
+        width: 14rem;
+        bottom: 20px;
+        left: 70px;
+        padding: 1.2rem 1rem;
+    }
+
     .sign-upper p {
-        width: 60%;
-        padding-top: 10px;
-        font-size: clamp(1rem, 2.5vw, 1.5rem);
-    }
-    
-    .sign-lower {
-        width: 80%;
+        font-size: clamp(1rem, 2.5vw, 1.3rem);
     }
 
     .sign-lower p {
-        font-size: clamp(1.2rem, 3vw, 1.8rem);
+        font-size: clamp(1rem, 2.2vw, 1.3rem);
     }
-    
-    p#countdown-timer {
-        margin-top: 8rem;
-        margin-left: -2.6rem !important;
+
+    .road-signs {
+        bottom: 50px;
+        right: 50px;
     }
 
     .road-signs img {
@@ -233,45 +216,22 @@ p#countdown-timer {
         font-size: 3.0rem;
     }
 
-    img.info-board {
-        height: 18rem;
+    .digital-sign {
+        height: 14rem;
+        width: 18rem;
+        padding: 1.4rem 1.2rem;
     }
 
-    .sign-content {
-        width: 75%;
-        padding-right: 2px;
+    .sign-upper p {
+        font-size: clamp(1.5rem, 2.5vw, 1.7rem);
     }
 
-    p#countdown-timer {
-        margin-top: 8rem;
-        margin-left: -6rem !important;
-        width: 100%;
-    }
-
-    .road-signs {
-        bottom: 50px;
-        right: 50px;
+    .sign-lower p {
+        font-size: clamp(1.5rem, 2.2vw, 1.7rem);
     }
 }
-@media (min-width: 912px) {
-    p#countdown-timer {
-        margin-top: 10.5rem;
-        text-align: center;
-        margin-left: -2.5rem !important;
-    }
-}
+
 @media (min-width: 1200px) {
-
-    .sign-content {
-        left: 40%;
-        width: 50%;
-        transform: translateX(-48%);
-    }
-
-    p#countdown-timer {
-        text-align: center;
-        margin-left: -3.5rem !important;
-    }
 
     .road-signs {
         bottom: 60px;
